--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,18 @@ php:
   - hhvm # on Trusty only
   - nightly
 
+matrix:
+  - fast_finish: true
+  - allow_failures: 
+      - php: hhvm
+
+install:
+  - sudo apt-get install -y --force-yes php-mysql
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+
 before_script:
   - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
+  - echo 'date.timezone = "Europe/Paris"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+ 
+script: 
+  - test.php
