--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
 
 install:
   - wget https://github.com/osTicket/osTicket/archive/v1.10.1.tar.gz -O ot.tgz
-  - tar xvf ot.tgz && mv osTicket-1.10.1 osticket
+  - tar xvf ot.tgz && mv osTicket-1.10.1 ../osticket
  
 
 before_script:
