--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: php
+
+# These are the current latest versions of osTicket
 env: 
   - OSTICKET_VERSION=1.9.16
   - OSTICKET_VERSION=1.10.1
   
+### Prepare the build matrix for Travis to create the different tests we want
+### Note: Each env above is mixed with each include directive here to create
+### 8 different test runs.. which can get expensive, so, we limit this to 
+### just the ones we need to test. Therefore, we specifically exclude
+### unsupported builds, like osTicket 1.10 with php 5.3
 matrix:
   include:
     - php: 5.3
@@ -11,15 +18,22 @@ matrix:
     - php: 5.6
     - php: 7.1
   fast_finish: true
-  allow_failures:
+  exclude:
     - php: 5.3
       env: OSTICKET_VERSION=1.10.1
+    - php: 7.1
+      env: OSTICKET_VERSION=1.9.16
+      
+# Turn off the xdebug extension, we don't use coverage reports, and the precise errors were annoying
+before_install:
+  - phpenv config-rm xdebug.ini
 
 install:
-  - wget "https://github.com/osTicket/osTicket/archive/v${OSTICKET_VERSION}.tar.gz" -O ot.tgz
-  - tar xvf ot.tgz && mv osTicket-${OSTICKET_VERSION} ../osticket
+  - ./tests/install.sh
 
+## In order:
+# Run a PHP syntax check on every php file, cancels the build for any syntax errors
+# Set a timezone, picked a random one in Paris, PHP needs a timezone.
 before_script:
-  - phpenv config-rm xdebug.ini
   - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
   - echo 'date.timezone = "Europe/Paris"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
